Updated Latest Video and adjusted backend
Added links to the Channels mentioned in the Index page about section
> Link Style added ( .frostlight-link )
> Link Style edited ( .sildeer-link )
> Link Style Removed ( .mc-link )

Fixed syntax errors and removed unpaired divs

Moved Lost Angel CSS to separate Sheet, will be used later

Added divider and adjusted structure of the Latest Video section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- Internal Stylesheets -->
   <link href="assets/styles/main_style.css" rel="stylesheet" />
+	<link href="assets/styles/lost_angel_css.css" rel="stylesheet" />
 
   <!-- External Stylesheets -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -28,7 +29,7 @@
   <div class="viewport" id="viewport">
 
     <div class="above-nav">
-      <div class="logo" onclick="openInternal('index')"><span>Sakura Sedaia<span></div>
+      <div class="logo" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
       <div class="info">Personal Portfolio</div>
       <div class="xmasCounter" id="xmasContainer">Days until Christmas:
         <span id="xmasCounter">Undefined</span>
@@ -54,7 +55,6 @@
 
   </div>
 
-  </div>
   <!-- End Header -->
 
   <div class="dev-warning" id="devWarning">
@@ -72,8 +72,8 @@
           build simple websites, I eventually hope to turn Website Design into
           a carreer and 3D Animation into a suitable hobby. I currently have
           an IRL Job and work within many online Minecraft production
-          studio's. Currently I am working on 3 different Projects. The Begnnings by Frostlight Studios, Parralel Z by
-          Silver Deer Entertainment, and The Lost Angel, Directed by me
+          studio's. Currently I am working on 3 different Projects. The Begnnings by <a class="frostlight-link">Frostlight Studios</a>, Parralel Z by
+          <a class="sildeer-link">Silver Deer Entertainment</a>, and The Lost Angel, Directed by me
         </p>
       </div>
     </div>
@@ -98,13 +98,13 @@
           <h1>
             Latest
             <a href="#" class="yt-links-thick"
-              onclick="openExternal('www.youtube.com/channel/UCGuwtqpTXQELvMYkv8T1zlw')">YouTube</a>
+              onclick="openExternal('www.youtube.com/watch?v=oxc3xX1p_uQ&feature=youtu.be')">YouTube</a>
             Video Release
           </h1>
         </div>
         <div class="container">
           <div class="col video">
-            <iframe width="480" height="270" src="https://www.youtube.com/embed/BXT9TcYnQLY" frameborder="0"
+            <iframe width="480" height="270" src="https://www.youtube.com/embed/oxc3xX1p_uQ" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
           </div>
@@ -113,26 +113,22 @@
             <h3>Title:</h3>
             <div>
               <a href="#" class="yt-links-thin"
-                onclick="openExternal('www.youtube.com/watch?v=BXT9TcYnQLY&t=1134s',1)">NEW YEARS STREAM!!!!</a>
+                onclick="openExternal('www.youtube.com/watch?v=oxc3xX1p_uQ&feature=youtu.be',1)">Live Stream // Songs of War Animation</a>
             </div>
-            <br />
             <h3><strong>Short Description</strong></h3>
             <div>
-              The Map Download:<br>
-              <a class="mc-link"
-                onclick="openExternal('www.minecraft.net/en-us/minecraft-java-community-celebration',1)">"Minecraft
-                Community Celebration"</a>
+              <p>Music by <a class="yt-links-thin">AfterInfinity</a></p>
+              <a class="koa-link" onclick="openExternal('discord.gg/fSFhrAGC6R',1)">Knights of Ardonia Discord</a>
             </div>
-            <br />
-            <div>
-              <a class="yt-links-thin" onclick="openExternal('www.youtube.com/watch?v=BXT9TcYnQLY&t=1134s',1)">View the
+            <div class="vid-divider">
+              <a class="yt-links-thin" onclick="openExternal('www.youtube.com/watch?v=oxc3xX1p_uQ&feature=youtu.be',1)">View the
                 full Description on youtube.com</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="lost-angel">
+    <div class="lost-angel-frontpage">
       <h1>The Lost Angel</h1>
       <h2>A fight for survival</h2>
       <p>No set release date, more information coming soon</p>
