Added some extra Bullshit

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
   <div class="dev-warning" id="devWarning">
     <!-- HTML Not Displayed, Developer Mode Disabled -->
   </div>
+	
+	<div class="deprication-warning">
+		<strong>ATTENTION: </strong>
+		The SLACME Rig will be removed from this website by March 1st, if you wish to download the rig before it is taken down from the page
+	</div>
+	
   <!-- Begin page Content -->
   <div class="content-section">
     <div class="about">
