--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -59,27 +59,36 @@
 	<div class="dev-warning" id="devWarning">
 		<!-- HTML Not Displayed, Developer Mode Disabled -->
 	</div>
-
+	
+	<div class="deprication-warning">
+		<strong>ATTENTION: </strong>
+		The SLACME Rig will be removed from this website by March 1st, if you wish to download the rig before it is taken down from the page
+	</div>
+	
 	<div class="about-sacr">
 		<div class="title-sacr"
-			style="background-image: url(assets/images/WPRenders/Sakura_OnyxV2_BlueAngel.png);background-position: center;background-size: cover;">
+			style="background-image: url(assets/images/MCRigBackgrouns/SACRThumbnail5.jpg);background-position: center;background-size: cover;">
 			<div class="title-text">
 				<h1>Sakura's Advanced Character Rig</h1>
 				<h3>Lightweight Advanced Minecraft Character Rig built and designed by an Animator for Animators</h3>
+				<div class="credit" onclick="openSACRPromotional()">
+					Splash Art by: Chiefsam34#9456
+				</div>
 			</div>
 			<div class="title-bg" style="
 			background-image: url('assets/images/WPRenders/Sakura_EnderEgg_Discovery_V2.jpg')"></div>
-
 		</div>
 
 		<!-- Rig Download -->
 		<div class="rig-download-section">
-			<div class="rds-col rds-background">
-				<img src="assets/images/MCRigBackgrouns/SACRThumbnail4.jpg" width="540px" alt="background">
+			<div class="rds-col" >
+				<div class="rds-background"><img src="assets/images/Thumbnails/SACR R4.2 Promotional Art.jpg" width="540px" alt="background" onclick="openSACRPromotional()">
+				</div>
 			</div>
+			
 			<div class="rds-col">
-				<h1>Download SACR R4.1.2 LTS</h1>
-				<span class="file-details">File Size: 3.30MB |
+				<h1>Download SACR R4.2</h1>
+				<span class="file-details">File Size: 779 Kb |
 					<a onclick="openText('sacr-changelog-latest')" class="download-extra">Changelog</a> |
 					<a onclick="openExternal('github.com/SakuraSedaia/SACR-MC-Rig/','secure')"
 						class="download-extra">GitHub
