--- a/slacme-rig.html
+++ b/slacme-rig.html
@@ -63,8 +63,9 @@
 
 	<div class="deprication-warning">
 		<strong>ATTENTION: </strong>
-		rig is now Depricated, no further Updates will be made for it
+		The SLACME Rig will be removed from this website by March 1st, if you wish to download the rig before it is taken down from the page
 	</div>
+	
 	<div class="about-sacr">
 		<div class="title-sacr"
 			style="background-image: url(assets/images/MCRigBackgrouns/LACMThumbnail1.PNG);background-position: 0 -1in;">
