Removed the Buggy Ass Rig (SLACME)

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <div class="sideNav" id="sideNav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a onclick="openInternal('sacr-rig')">SACR</a>
-    <a onclick="openInternal('slacme-rig')">SLACME</a>
-    <a onclick="openExternal('git.sakura-sedaia.com/assets')">Assets</a>
+	  
+		<a onclick="openExternal('git.sakura-sedaia.com/assets')">Assets &#40;Ext&#41;</a>
   </div>
 	
   <!-- Viewport Begin -->
@@ -76,7 +76,7 @@
 	<!-- Slacme Deprication Warning -->
 	<div class="deprication-warning">
 		<strong>ATTENTION: </strong>
-		The SLACME Rig will be removed from this website by March 1st, if you wish to download the rig before it is taken down from the page
+		The SLACME Rig has been removed and can no longer be accessed via this website
 	</div>
 	
   <!-- Begin page Content -->
@@ -172,9 +172,9 @@
           <div>
             <a onclick="openInternal('sacr-rig')" class="links" href="#">SACR Rig</a>
           </div>
-          <div>
-            <a onclick="openInternal('slacme-rig')" class="links" href="#">SLACME Rig</a>
-          </div>
+					<div>
+						<a onclick="openExternal('git.sakura-sedaia.com/Blender-Assets',1)" class="links" href="#">Assets &#40;Ext&#41;</a>
+					</div>
         </div>
 
         <div class="right-section footer-div">
