--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -22,8 +22,7 @@
 	<div class="sideNav" id="sideNav">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		<a onclick="openInternal('sacr-rig')" class="active">SACR</a>
-		<a onclick="openInternal('slacme-rig')">SLACME</a>
-		<a onclick="openExternal('git.sakura-sedaia.com/assets')">Assets</a>
+		<a onclick="openExternal('git.sakura-sedaia.com/assets')">Assets &#40;Ext&#41;</a>
 	</div>
 	<div class="viewport" id="viewport">
 
@@ -62,7 +61,7 @@
 	
 	<div class="deprication-warning">
 		<strong>ATTENTION: </strong>
-		The SLACME Rig will be removed from this website by March 1st, if you wish to download the rig before it is taken down from the page
+		The SLACME Rig has been removed and can no longer be accessed via this website
 	</div>
 	
 	<div class="about-sacr">
@@ -95,7 +94,6 @@
 						Repo</a>
 				</span>
 				<div class="download-lr download-extra" onclick="downloadSACR(true)">Latest Release</div>
-				<div onclick="openInternal('slacme-rig')" class="links">Go to Sakura's LACM Edit</div>
 			</div>
 
 		</div>
@@ -146,7 +144,7 @@
 						<a onclick="openInternal('sacr-rig')" class="links" href="#">SACR Rig</a>
 					</div>
 					<div>
-						<a onclick="openInternal('slacme-rig')" class="links" href="#">SLACME Rig</a>
+						<a onclick="openExternal('git.sakura-sedaia.com/Blender-Assets',1)" class="links" href="#">Assets &#40;Ext&#41;</a>
 					</div>
 				</div>
 
