--- a/index.html
+++ b/index.html
@@ -16,32 +16,33 @@
   <!-- External Stylesheets -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link href="assets/styles/main_style.css" rel="stylesheet" type="text/css" />
+	
 </head>
 
 <body>
+<!-- Side Navigation Start -->
   <div class="sideNav" id="sideNav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a onclick="openInternal('sacr-rig')">SACR</a>
-    <a onclick="openInternal('slacme-rig')">SLACME</a>
-    <a onclick="openExternal('git.sakura-sedaia.com/assets')">Assets</a>
+    <a onclick="openInternal('index')">Home</a>
+    <a onclick="openInternal('about')">About</a>
+    <a onclick="openInternal('rigs')">Rigs</a>
+    <a onclick="openInternal('contact')">Contact</a>
   </div>
+	
+<!-- Main Viewport Start -->
   <div class="viewport" id="viewport">
-
-    <div class="above-nav">
-      <div class="logo" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
+    
+    <div class="header-contain" id="header">
+		<div class="above-nav">
+      <div class="logo"   href="javascript:void(0)" onclick="openNav()">
+		  <span class="material-icons">menu</span>
+		  <span class="text">Sakura Sedaia</span>
+	</div>
       <div class="info">Personal Portfolio</div>
       <div class="xmasCounter" id="xmasContainer">Days until Christmas:
         <span id="xmasCounter">Undefined</span>
       </div>
     </div>
-    <nav class="nav">
-      <div class="nav-link active" aria-current="page" onclick="openInternal('index')">Home</div>
-      <div class="nav-link" onclick="openNav()">Rigs</div>
-      <div class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Projects</div>
-      <div class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact</div>
-    </nav>
-    <div class="header-contain" id="header"
-      style="background-image: url('https://sakura-sedaia.com/assets/images/WPRenders/BarSet_Preview4.png');">
       <!-- Header Content -->
       <div class="header-content">
         <div class="header-text">
@@ -52,7 +53,7 @@
 
     </div>
 
-  </div>
+  
 
   <!-- End Header -->
 
@@ -65,23 +66,13 @@
       <div class="title">
         <h1>Who am I</h1>
         <p>
-          I am a <a id="age">null</a> year old 3D Animator and Website
-          Designer from Iowa, I started 3D Animation when I was 12 and Website
-          Design when I was 14. I mainly work with Minecraft Animation and
-          build simple websites, I eventually hope to turn Website Design into
-          a carreer and 3D Animation into a suitable hobby. I currently have
-          an IRL Job and work within many online Minecraft production
-          studio's. The most prominant one being
-          <a onclick="openExternal('www.youtube.com/channel/UCbT_Y7FKTmZxr-EadQs0GNA')" class="sildeer-link"
-            href="#">Silver Deer Entertainment</a>, for which I am writting and
-          directing a Zombie Survival Machinima
-          called Parallel Z.
+          I am a <a id="age">null</a> year old 3D Animator and Website Designer from Iowa, I started 3D Animation when I was 12 and Website Design when I was 14. I mainly work with Minecraft Animation and build simple websites, I eventually hope to turn Website Design into a carreer and 3D Animation into a suitable hobby. Not much is going on Channel wise due to Education reasons, but once education is done and I am available I will be ramping up production on two of my series, Parallel Z and Lost Angel. As well as continuing efforts on <em>"The Beginnings"</em> by <a class="about-link" onclick="openExternal('',1)">Frostlight</a>, <em>"Songs of War Seasons 2-3"</em> by <a class="about-link" onclick="openExternal('',1)">Knights of Ardonia</a>, and <em>"Operia"</em> by <a class="about-link" onclick="openExternal('www.youtube.com/channel/UCFls8rTZA1rCgFmWUBcmdlg',1)">RedBlue115</a>.
         </p>
       </div>
     </div>
     <div class="second-row">
       <div class="index-rig-display">
-        <div class="background" style="background-image: url('assets/images/MCRigBackgrouns/SACRThumbnail1.png')">
+        <div class="background">
         </div>
         <div class="content">
           <div class="rig-display-text">
@@ -89,86 +80,17 @@
             <p>All 100% free with no flags attatched</p>
           </div>
           <div class="rig-nav">
-            <div class="btn btn-4">View SACR</div>
-            <div class="btn btn-4">View Assets</div>
+            <div class="btn">View SACR</div>
+            <div class="btn">View Assets</div>
           </div>
         </div>
       </div>
 
-      <div class="latest-video">
-        <div class="title">
-          <h1>
-            Latest
-            <a href="#" class="yt-links-thick"
-              onclick="openExternal('www.youtube.com/channel/UCGuwtqpTXQELvMYkv8T1zlw')">YouTube</a>
-            Video Release
-          </h1>
-        </div>
-        <div class="container">
-          <div class="col video">
-            <iframe width="480" height="270" src="https://www.youtube.com/embed/Pd-7xnGFuzQ" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
-          </div>
-
-          <div class="col meta">
-            <h3>Title:</h3>
-            <div>
-              <a href="#" class="yt-links-thin"
-                onclick="openExternal('www.youtube.com/watch?v=BXT9TcYnQLY&t=1134s',1)">NEW YEARS STREAM!!!!</a>
-            </div>
-            <br />
-            <h3><strong>Short Description</strong></h3>
-            <div>
-              The Map Download:<br>
-              <a class="mc-link" onclick="openExternal('www.minecraft.net/en-us/minecraft-java-community-celebration',1)">"Minecraft Community Celebration"</a>
-            </div>
-            <br />
-            <div>
-              <a class="yt-links-thin" onclick="openExternal('www.youtube.com/watch?v=BXT9TcYnQLY&t=1134s',1)">View the full Description on youtube.com</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      
     </div>
   </div>
-
-  <!-- Footer -->
-  <div class="footer">
-    <div class="footer-desktop">
-      <div class="footer-top-container">
-        <div class="left-section footer-div">
-          <div>
-            <a onclick="openInternal('index')" class="links" href="#">Home</a>
-          </div>
-          <div>
-            <a onclick="openInternal('sacr-rig')" class="links" href="#">SACR Rig</a>
-          </div>
-          <div>
-            <a onclick="openInternal('slacme-rig')" class="links" href="#">SLACME Rig</a>
-          </div>
-        </div>
-
-        <div class="right-section footer-div">
-          <div class="footer-icon links">
-            <i class="fab fa-github" onclick="openExternal('git.sakura-sedaia.com',1)"></i>
-            Github
-          </div>
-          <div class="footer-icon links">
-            <i class="fab fa-google" onclick="openExternal('domains.google/',1)"></i>
-            Google Domains
-          </div>
-          <div class="footer-icon links">
-            <i class="fab fa-codepen" onclick="openExternal('codepen.io',1)"></i>
-            Codepen
-          </div>
-        </div>
-      </div>
-      <div class="footer-bottom-container">
-        <div class="footer-content">&copy; 2020 by Sakura Sedaia</div>
-      </div>
-    </div>
-  </div>
+	</div>
+  
   <!-- Scripts -->
   <script src="assets/scripts/age.js"></script>
   <script src="assets/scripts/seasons.js"></script>
