--- a/index.html
+++ b/index.html
@@ -1,101 +1,129 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Sakura Sedaia</title>
 
-<head>
-  <title>Sakura Sedaia</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
 
-  <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
+    <!-- Internal Stylesheets -->
+    <link href="assets/styles/main_style.css" rel="stylesheet" />
 
-  <!-- Internal Stylesheets -->
-  <link href="assets/styles/main_style.css" rel="stylesheet" />
+    <!-- External Stylesheets -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="assets/styles/main_style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
 
-  <!-- External Stylesheets -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link href="assets/styles/main_style.css" rel="stylesheet" type="text/css" />
-	
-</head>
-
-<body>
-<!-- Side Navigation Start -->
-  <div class="sideNav" id="sideNav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a onclick="openInternal('index')">Home</a>
-    <a onclick="openInternal('about')">About</a>
-    <a onclick="openInternal('rigs')">Rigs</a>
-    <a onclick="openInternal('contact')">Contact</a>
-  </div>
-	
-<!-- Main Viewport Start -->
-  <div class="viewport" id="viewport">
-    
-    <div class="header-contain" id="header">
-		<div class="above-nav">
-      <div class="logo"   href="javascript:void(0)" onclick="openNav()">
-		  <span class="material-icons" id="sideNavBurger">menu</span>
-		  <span class="text">Sakura Sedaia</span>
-	</div>
-      <div class="info">Personal Portfolio</div>
-      <div class="xmasCounter" id="xmasContainer">Days until Christmas:
-        <span id="xmasCounter">Undefined</span>
-      </div>
-    </div>
-      <!-- Header Content -->
-      <div class="header-content">
-        <div class="header-text">
-          <h1>Personal Portfolio - Home</h1>
-          <h4>Provided by you're local Internet Neko</h4>
-        </div>
-      </div>
-
+  <body>
+    <!-- Side Navigation Start -->
+    <div class="sideNav" id="sideNav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
+        &times;
+      </a>
+      <a onclick="openInternal('index')">Home</a>
+      <a onclick="openInternal('about')">About</a>
+      <a onclick="openInternal('rigs')">Rigs</a>
+      <a onclick="openInternal('contact')">Contact</a>
     </div>
 
-  
-
-  <!-- End Header -->
-
-	  
-  <!-- Begin page Content -->
-  <div class="content-section">
-    <div class="about">
-      <div class="title">
-        <h1>Who am I</h1>
-        <p>
-          I am a <a id="age">null</a> year old 3D Animator and Website Designer from Iowa, I started 3D Animation when I was 12 and Website Design when I was 14. I mainly work with Minecraft Animation and build simple websites, I eventually hope to turn Website Design into a carreer and 3D Animation into a suitable hobby. Not much is going on Channel wise due to Education reasons, but once education is done and I am available I will be ramping up production on two of my series, Parallel Z and Lost Angel. As well as continuing efforts on <em>"The Beginnings"</em> by <a class="yt-links-thin" onclick="openExternal('',1)">Frostlight</a>, <em>"Songs of War Seasons 2-3"</em> by <a class="yt-links-thin" onclick="openExternal('',1)">Knights of Ardonia</a>, and <em>"Operia"</em> by <a class="yt-links-thin" onclick="openExternal('www.youtube.com/channel/UCFls8rTZA1rCgFmWUBcmdlg',1)">RedBlue115</a>.
-        </p>
-      </div>
-    </div>
-    <div class="second-row">
-      <div class="index-rig-display">
-        <div class="background">
-        </div>
-        <div class="content">
-          <div class="rig-display-text">
-            <h2>Check out the SACR and my Asset's page</h2>
-            <p>All 100% free with no flags attatched</p>
+    <!-- Main Viewport Start -->
+    <div class="viewport" id="viewport">
+      <div class="header-contain" id="header">
+        <div class="above-nav">
+          <div class="logo" href="javascript:void(0)" onclick="openNav()">
+            <span class="material-icons" id="sideNavBurger">menu</span>
+            <span class="text">Sakura Sedaia</span>
           </div>
-          <div class="rig-nav">
-            <div class="btn">View SACR</div>
-            <div class="btn">View Assets</div>
+          <div class="info">Personal Portfolio</div>
+          <div class="xmasCounter" id="xmasContainer">
+            Days until Christmas:
+            <span id="xmasCounter">Undefined</span>
+          </div>
+        </div>
+        <!-- Header Content -->
+        <div class="header-content">
+          <div class="header-text">
+            <h1>Personal Portfolio - Home</h1>
+            <h4>Provided by you're local Internet Neko</h4>
           </div>
         </div>
       </div>
 
-      
-    </div>
-  </div>
-	</div>
-  
-  <!-- Scripts -->
-  <script src="assets/scripts/responsive.js"></script>
-  <script id="ageScriptStartup">
-    // Age Display Set
-    var ageDisplay = document.getElementById('age')
-    ageDisplay.innerHTML = sakuraAge
-  </script>
-</body>
+      <!-- End Header -->
 
+      <!-- Begin page Content -->
+      <div class="content-section">
+        <div class="about">
+          <div class="title">
+            <h1>Who am I</h1>
+            <p>
+              I am a
+              <a id="age">null</a>
+              year old 3D Animator and Website Designer from Iowa, I started 3D
+              Animation when I was 12 and Website Design when I was 14. I mainly
+              work with Minecraft Animation and build simple websites, I
+              eventually hope to turn Website Design into a carreer and 3D
+              Animation into a suitable hobby. Not much is going on Channel wise
+              due to Education reasons, but once education is done and I am
+              available I will be ramping up production on two of my series,
+              Parallel Z and Lost Angel. As well as continuing efforts on
+              <em>"The Beginnings"</em>
+              by
+              <a class="yt-links-thin" onclick="openExternal('',1)">
+                Frostlight
+              </a>
+              ,
+              <em>"Songs of War Seasons 2-3"</em>
+              by
+              <a class="yt-links-thin" onclick="openExternal('',1)">
+                Knights of Ardonia
+              </a>
+              , and
+              <em>"Operia"</em>
+              by
+              <a
+                class="yt-links-thin"
+                onclick="openExternal('www.youtube.com/channel/UCFls8rTZA1rCgFmWUBcmdlg',1)"
+              >
+                RedBlue115
+              </a>
+              .
+            </p>
+          </div>
+        </div>
+        <div class="second-row">
+          <div class="index-rig-display">
+            <div class="content">
+              <div class="rig-display-text">
+                <h2>Check out the SACR and my Asset's page</h2>
+                <p>All 100% free with no flags attatched</p>
+              </div>
+              <div class="rig-nav">
+                <div class="btn">View SACR</div>
+                <div class="btn">View Assets</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/scripts/responsive.js"></script>
+    <script id="ageScriptStartup">
+      // Age Display Set
+      var ageDisplay = document.getElementById('age')
+      ageDisplay.innerHTML = sakuraAge
+    </script>
+  </body>
 </html>
