--- a/index.html
+++ b/index.html
@@ -67,50 +67,20 @@
           <div class="title">
             <h1>Who am I</h1>
             <p>
-              I am a
-              <a id="age">null</a>
-              year old 3D Animator and Website Designer from Iowa, I started 3D
-              Animation when I was 12 and Website Design when I was 14. I mainly
-              work with Minecraft Animation and build simple websites, I
-              eventually hope to turn Website Design into a carreer and 3D
-              Animation into a suitable hobby. Not much is going on Channel wise
-              due to Education reasons, but once education is done and I am
-              available I will be ramping up production on two of my series,
-              Parallel Z and Lost Angel. As well as continuing efforts on
-              <em>"The Beginnings"</em>
-              by
-              <a class="yt-links-thin" onclick="openExternal('',1)">
-                Frostlight
-              </a>
-              ,
-              <em>"Songs of War Seasons 2-3"</em>
-              by
-              <a class="yt-links-thin" onclick="openExternal('',1)">
-                Knights of Ardonia
-              </a>
-              , and
-              <em>"Operia"</em>
-              by
-              <a
-                class="yt-links-thin"
-                onclick="openExternal('www.youtube.com/channel/UCFls8rTZA1rCgFmWUBcmdlg',1)"
-              >
-                RedBlue115
-              </a>
-              .
+              I am a <a id="age">null</a> year old 3D Animator and Website Designer from Iowa, I started 3D Animation when I was 12 and Website Design when I was 14. I mainly work with Minecraft Animation and build simple websites, I eventually hope to turn Website Design into a carreer and 3D Animation into a suitable hobby. Not much is going on Channel wise due to Education reasons, but once education is done and I am available I will be ramping up production on two of my series, Parallel Z and Lost Angel. As well as continuing efforts on<em>"The Beginnings"</em> by <a class="yt-links-thin" onclick="openExternal('noData',-1)">Frostlight</a>, <em>"Songs of War Seasons 2-3"</em> by <a class="yt-links-thin" onclick="openExternal('noData',-1)">Knights of Ardonia</a>, and<em>"Operia"</em> by <a class="yt-links-thin" onclick="openExternal('www.youtube.com/channel/UCFls8rTZA1rCgFmWUBcmdlg',1)">RedBlue115</a>.
             </p>
           </div>
         </div>
         <div class="second-row">
           <div class="index-rig-display">
+            <div class="background"></div>
             <div class="content">
               <div class="rig-display-text">
                 <h2>Check out the SACR and my Asset's page</h2>
                 <p>All 100% free with no flags attatched</p>
               </div>
               <div class="rig-nav">
-                <div class="btn">View SACR</div>
-                <div class="btn">View Assets</div>
+                <div class="btn">View Rig Gallery</div>
               </div>
             </div>
           </div>
