--- a/sacr-wiki/wiki_home.html
+++ b/sacr-wiki/wiki_home.html
@@ -15,9 +15,20 @@
         <h1>The Rig Wiki</h1>
         <h3>A database on Knowledge on all Rigs made by Sakura</h3>
     </div>
-    <div class="portal">
+    <div class="sacr-section">
         <h2>SACR Regions</h2>
-        <div class="sacr-diagram">
+        <div class="sacr-col-contain">
+        <div class="flexbox-2 sacr-desc">
+            <h3>What is SACR?</h3>
+            <p>
+                SACR is a Advanced Minecraft Rig designed and built inside Blender, it is designed to be usable for any purpose, while most versions up to now have been made with Animations in mind, but with the R5 release, the plan is to add in features to make it more Single-frame Render friendly.
+            </p>
+            <p>Go to the download page for SACR</p>
+            <div class="button">SACR Homepage</div>
+        </div>
+        <div class="flexbox-2 sacr-diagram">
+            <h3>Different Area's</h3>
+            <div class="sacr-flex-container">
             <div>
                 <div class="diagram-item w-mid h-mid"style="background-image: url('wiki_assets/images/diagram-parts/head.png');">
                     <span style="padding-top: 25px;">Head</span>
@@ -28,7 +39,7 @@
                     <span style="padding-top: 50px;">Arm R</span>
                 </div>
                 <div class="diagram-item w-mid h-lrg" style="background-image: url('wiki_assets/images/diagram-parts/torso.png');"">
-                    <span style="padding-top: 50px;">Torso</span>
+                    <span style="padding-top: 50px;">Global</span>
                 </div>
                 <div class="diagram-item w-sml h-lrg" style="background-image: url('wiki_assets/images/diagram-parts/arm-2.png');"">
                     <span style="padding-top: 50px;">Arm L</span>
@@ -42,7 +53,9 @@
                     <span style="padding-top: 50px;">Leg L</span>
                 </div>
             </div>
-
+        </div>
+        </div>
+    </div>
             <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
             <script>
                 AOS.init();
