Prepared Public Draft of Home page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <a onclick="openInternal('about')">About</a>
       <a onclick="openInternal('rigs')">Rigs</a>
       <a onclick="openInternal('contact')">Contact</a>
+      
+      <a onclick="openInternal('sacr-wiki/wiki_home')">Rig Wiki</a>
     </div>
 
     <!-- Main Viewport Start -->
