--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   </head>
 
   <body>
+    <div class="dev-warning">
+      <h2>ATTENTION</h2>
+      <p>A pre-release version of the SACR Wiki has been released, be sure to check it out <a href="sacr-wiki/wiki.html">here</a></p>
+    </div>
     <!-- Side Navigation -->
     <div class="sideNav" id="sideNav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -100,12 +104,6 @@
       <!-- End Header -->
       <div class="dev-warning" id="devWarning">
         <!-- HTML Not Displayed, Developer Mode Disabled -->
-      </div>
-      <!-- Slacme Deprication Warning -->
-      <div class="deprication-warning">
-        <strong>ATTENTION: </strong>
-        The SLACME Rig has been removed and can no longer be accessed via this
-        website
       </div>
 
       <!-- Begin page Content -->
